# simple_monitoring

./: README.md  config.py  example.env  install.sh  main.py  pyproject.toml  server.py  simple_monitoring.service
server/: server.py  simple_server.service
