[project]
name = "simple-monitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "3.13.5"
package-mode = false

[build-system]
python = "^3.10"
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
flask = "^3.1.2"
