[project]
name = "simple-monitoring"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[build-system]
python = "^3.13"
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
flask = "^3.1.2"
pydantic-settings = "^2.12.0"
requests = "^2.32.5"